Tercer Entrega Javascript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <h1> INGRESE SUS DATOS PERSONALES </h1>
+        <ul>
+            <li id="nombre"></li>
+            <li id="edad"></li>
+        </ul>
+    </div>
+
+    <div>
+        <button id="boton"> Confirmar Datos </button>
+    </div>
+
     <script src="./js/miArchivo.js"></script>
 </body>
 </html>
