--- a/index.html
+++ b/index.html
@@ -123,17 +123,18 @@
                 <input type="text" class="completar"> <label for="" class="label"> Correo Electronico </label>
                 <input type="text" class="completar"> <label for="" class="label"> Telefono </label>
                 <input type="text" class="completar"> <label for="" class="label"> Escriba su Mensaje </label>
-                <input type="submit" class="enviar">
+                <button class="enviar" id="send"> Enviar </button>
             </form>
         </section>
 
 
     </main>
 
-    <script src="./js/miArchivo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.all.min.js"></script>
+    <!-- <script src="./js/miArchivo.js"></script> -->
     <script src="./js/formulario.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
+    <script src="./lib/sweetAlert2.min.js"></script>
     <script>
         AOS.init();
     </script>
