--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.all.min.js"></script>
     <!-- <script src="./js/miArchivo.js"></script> -->
     <script src="./js/formulario.js"></script>
+    <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./lib/sweetAlert2.min.js"></script>
     <script>
